# BackEnd/src/routes/userRoutes.ts
@@ -5,5 +5,6 @@ const router = Router();
 
 router.get('/', UserController.getUsers);
 router.post('/', UserController.createUser);
+router.post('/login', UserController.login);
 
 export default router;
